fix: z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,6 @@ html{
   }
 
   button {
-    @apply  rounded-xl uppercase border-red-400 border-2 text-[#1f2937]
+    @apply  rounded-xl uppercase border-red-400 border-2 text-[#FF6E6C]
   }
 }
